--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippy.js/react": "^3.1.1",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
